bin/tests/snapshots/array_sorting__08264d50ff1b893f566d95c93084fd2e_fix.snap
---
source: bin/tests/array_sorting.rs
---
[
  ''if [[ "$1" == "" ]]; then''
  "message=$2"
  "nohup _timer $mins"
]
---
