bin/tests/snapshots/array_sorting__0a02aba31b95bf14361a8f1402c8a172_fix.snap
---
source: bin/tests/array_sorting.rs
---
[
  "nohup _timer $mins"
  ''if [[ "$1" == "" ]]; then''
  "message=$2"
]
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,5 @@
 [
-  "nohup _timer $mins"
   ''if [[ "$1" == "" ]]; then''
   "message=$2"
+  "nohup _timer $mins"
 ]
