bin/tests/snapshots/array_sorting__0a02aba31b95bf14361a8f1402c8a172_lint_errfmt.snap
---
source: bin/tests/array_sorting.rs
---
[
  "nohup _timer $mins"
  ''if [[ "$1" == "" ]]; then''
  "message=$2"
]
---
<temp_file_path>>3:3:W:34:[array_sorting] `''if [[ "$1" == "" ]]; then''` is out of alphabetical order
