bin/tests/snapshots/array_sorting__0a02aba31b95bf14361a8f1402c8a172_lint_stderr.snap
---
source: bin/tests/array_sorting.rs
---
[
  "nohup _timer $mins"
  ''if [[ "$1" == "" ]]; then''
  "message=$2"
]
---
[array_sorting] Warning: Array elements are not in alphabetical order
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   ''if [[ "$1" == "" ]]; then''
   │   ──────────────┬──────────────  
   │                 ╰──────────────── ''if [[ "$1" == "" ]]; then'' is out of alphabetical order
───╯
