bin/tests/snapshots/array_sorting__146188fb8cdd8ea288e3df549e6e0b21_lint_stderr.snap
---
source: bin/tests/array_sorting.rs
---
{
  text.readme.order = [
    "intro"
    "hosts"
  ];
}
---
