bin/tests/snapshots/array_sorting__194d04ceab9a9d36f8b43b85d7d3968c_fix.snap
---
source: bin/tests/array_sorting.rs
---
{
  modules = [
    "zebra"
    "apple"
  ];
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,6 +1,6 @@
 {
   modules = [
+    "apple"
     "zebra"
-    "apple"
   ];
 }
