bin/tests/snapshots/array_sorting__194d04ceab9a9d36f8b43b85d7d3968c_lint_errfmt.snap
---
source: bin/tests/array_sorting.rs
---
{
  modules = [
    "zebra"
    "apple"
  ];
}
---
<temp_file_path>>4:5:W:34:[array_sorting] `"apple"` is out of alphabetical order
