bin/tests/snapshots/array_sorting__194d04ceab9a9d36f8b43b85d7d3968c_lint_json.snap
---
source: bin/tests/array_sorting.rs
---
{
  modules = [
    "zebra"
    "apple"
  ];
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "array_sorting",
      "note": "Array elements are not in alphabetical order",
      "code": 34,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 4,
              "column": 5
            },
            "to": {
              "line": 4,
              "column": 12
            }
          },
          "message": "`\"apple\"` is out of alphabetical order",
          "suggestion": {
            "at": {
              "from": {
                "line": 2,
                "column": 13
              },
              "to": {
                "line": 5,
                "column": 4
              }
            },
            "fix": "[\n    \"apple\"\n    \"zebra\"\n  ]"
          }
        }
      ]
    }
  ]
}
