bin/tests/snapshots/array_sorting__194d04ceab9a9d36f8b43b85d7d3968c_lint_stderr.snap
---
source: bin/tests/array_sorting.rs
---
{
  modules = [
    "zebra"
    "apple"
  ];
}
---
[array_sorting] Warning: Array elements are not in alphabetical order
   ╭─[ <temp_file_path>:4:5 ]
   │
 4 │     "apple"
   │     ───┬───  
   │        ╰───── "apple" is out of alphabetical order
───╯
