bin/tests/snapshots/array_sorting__3c77c41955e20985b0e3cbf9916ed013_lint_errfmt.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  pkgs.vim
  pkgs.git
]
---
<temp_file_path>>3:3:W:34:[array_sorting] `pkgs.git` is out of alphabetical order
