bin/tests/snapshots/array_sorting__3c77c41955e20985b0e3cbf9916ed013_lint_json.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  pkgs.vim
  pkgs.git
]
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "array_sorting",
      "note": "Array elements are not in alphabetical order",
      "code": 34,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 11
            }
          },
          "message": "`pkgs.git` is out of alphabetical order",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 4,
                "column": 2
              }
            },
            "fix": "[\n  pkgs.git\n  pkgs.vim\n]"
          }
        }
      ]
    }
  ]
}
